--- a/examples/01_Quick_Start.ipynb
+++ b/examples/01_Quick_Start.ipynb
@@ -30,7 +30,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "AutoML-Alex version: 1.3.8\n"
+      "AutoML-Alex version: 1.3.9\n"
      ]
     }
    ],
@@ -160,90 +160,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "00:02:39 | > Start Fit Base Model\n",
-      "00:03:17 | ##################################################\n",
-      "00:03:17 | > Start Fit Models 2\n",
-      "00:03:17 | ##################################################\n",
-      "00:03:17 | ##################################################\n",
-      "00:03:18 | > Step 1: calc parameters and pruned score: get test 10 trials\n",
-      "00:07:02 |  One iteration ~ 22.5 sec\n",
-      "00:07:02 |  Possible iters ~ 8.0\n",
-      "00:07:02 | ! Not enough time to find the optimal parameters. \n",
+      "22:38:18 | > Start Fit Base Model\n",
+      "22:38:58 | ##################################################\n",
+      "22:38:58 | > Start Fit Models 2\n",
+      "22:38:58 | ##################################################\n",
+      "22:38:58 | ##################################################\n",
+      "22:38:59 | > Step 1: calc parameters and pruned score: get test 10 trials\n",
+      "22:42:20 |  One iteration ~ 20.1 sec\n",
+      "22:42:20 |  Possible iters ~ 36.0\n",
+      "22:42:20 | ! Not enough time to find the optimal parameters. \n",
       "                     Possible iters < 100. \n",
       "                     Please, Increase the 'timeout' parameter for normal optimization.\n",
-      "00:07:02 | --------------------------------------------------\n",
-      "00:07:02 |   Pruned Threshold Score: 0.9026\n",
-      "00:07:02 | ##################################################\n",
-      "00:07:02 | > Step 2: Full opt with Threshold Score Pruner\n",
-      "00:07:02 | ##################################################\n",
-      "00:07:02 | > Start optimization with the parameters:\n",
-      "00:07:02 | CV_Folds = 7\n",
-      "00:07:02 | Score_CV_Folds = 3\n",
-      "00:07:03 | Feature_Selection = False\n",
-      "00:07:03 | Opt_lvl = 1\n",
-      "00:07:03 | Cold_start = 15\n",
-      "00:07:03 | Early_stoping = 25\n",
-      "00:07:03 | Metric = roc_auc_score\n",
-      "00:07:03 | Direction = maximize\n",
-      "00:07:03 | ##################################################\n",
-      "Optimize: : 0it [00:00, ?it/s]\n",
-      "00:07:03 | > Finish Opt!\n",
-      "00:07:15 | Best Score: 0.9041 roc_auc_score\n",
-      "00:07:15 | ##################################################\n",
-      "00:07:15 | > Start Fit Models 3\n",
-      "00:07:15 | ##################################################\n",
-      "00:07:15 | ##################################################\n",
-      "00:07:16 | > Step 1: calc parameters and pruned score: get test 10 trials\n",
-      "00:13:21 |  One iteration ~ 36.5 sec\n",
-      "00:13:21 |  Possible iters ~ 15.0\n",
-      "00:13:21 | ! Not enough time to find the optimal parameters. \n",
-      "                     Possible iters < 100. \n",
-      "                     Please, Increase the 'timeout' parameter for normal optimization.\n",
-      "00:13:21 | --------------------------------------------------\n",
-      "00:13:21 |   Pruned Threshold Score: 0.9032\n",
-      "00:13:21 | ##################################################\n",
-      "00:13:21 | > Step 2: Full opt with Threshold Score Pruner\n",
-      "00:13:21 | ##################################################\n",
-      "00:13:21 | > Start optimization with the parameters:\n",
-      "00:13:21 | CV_Folds = 7\n",
-      "00:13:21 | Score_CV_Folds = 3\n",
-      "00:13:21 | Feature_Selection = False\n",
-      "00:13:21 | Opt_lvl = 1\n",
-      "00:13:21 | Cold_start = 15\n",
-      "00:13:21 | Early_stoping = 25\n",
-      "00:13:21 | Metric = roc_auc_score\n",
-      "00:13:21 | Direction = maximize\n",
-      "00:13:21 | ##################################################\n",
-      "Optimize: : 0it [00:00, ?it/s]\n",
-      "00:13:21 | > Finish Opt!\n",
-      "Finished loading model, total used 300 iterations\n",
-      "Finished loading model, total used 300 iterations\n",
-      "Finished loading model, total used 300 iterations\n",
-      "Finished loading model, total used 300 iterations\n",
-      "Finished loading model, total used 300 iterations\n",
-      "Finished loading model, total used 300 iterations\n",
-      "Finished loading model, total used 300 iterations\n",
-      "00:14:37 | Best Score: 0.9068 roc_auc_score\n",
-      "00:14:37 | ##################################################\n",
-      "00:14:37 | > Finish!\n"
+      "22:42:20 | --------------------------------------------------\n",
+      "22:42:20 |   Pruned Threshold Score: 0.9028\n",
+      "22:42:20 | ##################################################\n",
+      "22:42:20 | > Step 2: Full opt with Threshold Score Pruner\n",
+      "22:42:20 | ##################################################\n",
+      "22:42:21 | > Start optimization with the parameters:\n",
+      "22:42:21 | CV_Folds = 7\n",
+      "22:42:21 | Score_CV_Folds = 3\n",
+      "22:42:21 | Feature_Selection = False\n",
+      "22:42:21 | Opt_lvl = 1\n",
+      "22:42:21 | Cold_start = 15\n",
+      "22:42:21 | Early_stoping = 25\n",
+      "22:42:21 | Metric = roc_auc_score\n",
+      "22:42:21 | Direction = maximize\n",
+      "22:42:21 | ##################################################\n",
+      "Optimize: : 13it [07:01, 32.40s/it, | Model: LightGBM | OptScore: 0.9052 | Best roc_auc_score: 0.9067 ]\n",
+      "22:49:22 | > Finish Opt!\n",
+      "22:49:22 | Best Score: 0.9067 roc_auc_score\n",
+      "22:49:22 | ##################################################\n",
+      "22:49:22 | > Fit Best Models\n",
+      "22:49:22 | ##################################################\n",
+      "22:50:22 | Save DataPrepare\n",
+      "22:50:22 | Save Model\n",
+      "22:50:22 | Save Model\n",
+      "22:50:22 | Save Model\n",
+      "22:50:22 | Save Model\n",
+      "22:50:22 | Save Model\n",
+      "22:50:22 | Save Model\n",
+      "22:50:22 | Save Model\n",
+      "22:51:14 | Save DataPrepare\n",
+      "22:51:14 | Save Model\n",
+      "22:51:14 | Save Model\n",
+      "22:51:14 | Save Model\n",
+      "22:51:14 | Save Model\n",
+      "22:51:14 | Save Model\n",
+      "22:51:15 | Save Model\n",
+      "22:51:15 | Save Model\n",
+      "22:52:30 | Save DataPrepare\n",
+      "22:52:30 | Save Model\n",
+      "22:52:30 | Save Model\n",
+      "22:52:30 | Save Model\n",
+      "22:52:31 | Save Model\n",
+      "22:52:31 | Save Model\n",
+      "22:52:31 | Save Model\n",
+      "22:52:31 | Save Model\n",
+      "22:53:44 | Save DataPrepare\n",
+      "22:53:44 | Save Model\n",
+      "22:53:44 | Save Model\n",
+      "22:53:44 | Save Model\n",
+      "22:53:44 | Save Model\n",
+      "22:53:45 | Save Model\n",
+      "22:53:45 | Save Model\n",
+      "22:53:45 | Save Model\n",
+      "22:55:04 | Save DataPrepare\n",
+      "22:55:04 | Save Model\n",
+      "22:55:04 | Save Model\n",
+      "22:55:05 | Save Model\n",
+      "22:55:05 | Save Model\n",
+      "22:55:05 | Save Model\n",
+      "22:55:05 | Save Model\n",
+      "22:55:05 | Save Model\n",
+      "22:55:06 | ##################################################\n",
+      "22:55:06 | > Finish!\n"
      ]
     },
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<automl_alex.automl_alex.AutoMLClassifier at 0x7f6b5a8f98b0>"
+       "<automl_alex.automl_alex.AutoMLClassifier at 0x7f43d20c2580>"
       ]
      },
      "metadata": {},
-     "execution_count": 9
+     "execution_count": 5
     }
    ],
    "source": [
@@ -253,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {
     "tags": []
    },
@@ -264,40 +272,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Test AUC:  0.9127\n"
+      "Test AUC:  0.913\n"
      ]
     }
    ],
    "source": [
     "print('Test AUC: ', round(sklearn.metrics.roc_auc_score(y_test, predicts),4))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "predict_model_1 AUC: 0.9133\n",
-      "predict_model_2 AUC: 0.9095\n",
-      "predict_model_3 AUC: 0.9094\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(f'predict_model_1 AUC: {round(sklearn.metrics.roc_auc_score(y_test, model.predict_model_1),4)}')\n",
-    "print(f'predict_model_2 AUC: {round(sklearn.metrics.roc_auc_score(y_test, model.predict_model_2),4)}')\n",
-    "print(f'predict_model_3 AUC: {round(sklearn.metrics.roc_auc_score(y_test, model.predict_model_3),4)}')"
    ]
   },
   {
@@ -309,14 +296,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Save model\n",
       "Save model\n"
      ]
     }
@@ -327,41 +313,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "00:14:45 | Load DataPrepare\n",
-      "00:14:45 | Load Model\n",
-      "00:14:45 | Load Model\n",
-      "00:14:45 | Load Model\n",
-      "00:14:45 | Load Model\n",
-      "00:14:45 | Load Model\n",
-      "00:14:45 | Load Model\n",
-      "00:14:45 | Load Model\n",
-      "Load CrossValidation\n",
-      "Load model\n",
-      "00:14:45 | Load DataPrepare\n",
-      "00:14:45 | Load Model\n",
-      "Finished loading model, total used 300 iterations\n",
-      "00:14:46 | Load Model\n",
-      "Finished loading model, total used 300 iterations\n",
-      "00:14:46 | Load Model\n",
-      "Finished loading model, total used 300 iterations\n",
-      "00:14:46 | Load Model\n",
-      "Finished loading model, total used 300 iterations\n",
-      "00:14:46 | Load Model\n",
-      "Finished loading model, total used 300 iterations\n",
-      "00:14:46 | Load Model\n",
-      "Finished loading model, total used 300 iterations\n",
-      "00:14:46 | Load Model\n",
-      "Finished loading model, total used 300 iterations\n",
-      "Load CrossValidation\n",
-      "Load model\n",
-      "00:14:47 | Load AutoML\n"
+      "23:05:46 | Load AutoML\n"
      ]
     }
    ],
@@ -372,14 +331,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Test AUC:  0.9127\n"
+      "Test AUC:  0.9134\n"
      ]
     }
    ],
